tests/invalid/parent.private_child.m
:- module parent:private_child.
:- interface.
:- import_module io.

:- type foo ---> bar ; baz(int).

:- pred hello(io__state::di, io__state::uo) is det.

:- implementation.

hello --> io__write_string("parent:private_child:hello\n").
